// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar component should render with props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 72,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
        "top": 40,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
        }
      }
    >
      text
    </Text>
  </View>
  <ForwardRef
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "height": 36,
        "justifyContent": "center",
        "left": 16,
        "overflow": "hidden",
        "position": "absolute",
        "top": 32,
        "width": 36,
      }
    }
  >
    <Icon
      color="black"
      name="left"
      size={20}
    />
  </ForwardRef>
  <ForwardRef
    activeOpacity={0.7}
    style={
      Object {
        "lineHeight": 24,
        "position": "absolute",
        "right": 16,
        "top": 40,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#7284A5",
          "fontSize": 14,
          "lineHeight": 16,
        }
      }
    >
      text
    </Text>
  </ForwardRef>
</View>
`;

exports[`TabBar component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 72,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "position": "absolute",
        "top": 40,
        "width": "100%",
      }
    }
  />
</View>
`;
